reverted to body font for volunteer name to fix accented characters issue

--- a/configuration/partials/certificate/content.hbs
+++ b/configuration/partials/certificate/content.hbs
@@ -202,7 +202,7 @@
   "margin": [0, 0, 0, 0]
 },
 {
-  "text": {{>pdf_metadata_value key="title" default=(lowercase (concat user.first_name " " user.last_name))}},
+  "text": {{>pdf_metadata_value key="title" default=(concat user.first_name " " user.last_name)}},
   "margin": [0, 20, 0, 0],
   "style": ["volunteer_name", "bold"]
 },
