--- a/configuration/templates/account/sidebar.hbs
+++ b/configuration/templates/account/sidebar.hbs
@@ -23,6 +23,14 @@
       {{/if ~}}
       {{{label}}}
     </a>
+    {{#if public_checkbox ~}}
+    <div class="menu-badge">
+      <label class="form-checkbox">
+        <input type="checkbox">
+        <i class="form-icon"></i> Public
+      </label>
+    </div>
+    {{/if ~}}
   </li>
   {{/if ~}}
   {{/compare ~}}
