improved logic for profiles

--- a/configuration/templates/volunteering/profile.hbs
+++ b/configuration/templates/volunteering/profile.hbs
@@ -2,11 +2,13 @@
   <div class="empty-icon">
     <span class="fal fa-user fa-3x"></span>
   </div>
-  <p class="empty-subtitle">
-    profile
+  <p class="empty-title h5">
+    {{{@root.data.accountInfo.first_name}}} {{{@root.data.accountInfo.last_name}}}
   </p>
-  <div class="empty-action">
-  </div>
+  {{!-- <p class="empty-subtitle">
+  </p> --}}
+  {{!-- <div class="empty-action">
+  </div> --}}
 </div>
 
 <div class="content-break">
