--- a/configuration/templates/volunteering/awards.hbs
+++ b/configuration/templates/volunteering/awards.hbs
@@ -1,4 +1,3 @@
-
 {{#unless @root.data.isAdmin ~}}
 <div class="container awards">
   {{!-- <ul class="step">
@@ -23,7 +22,7 @@
       <div class="text-center h5 b-margin">
         {{type_name}}: {{certificate_name}} hours
       </div>
-      {{> badge type=type key=(slugify certificate_name) hours=hours}}
+      {{> badge hours=hours}}
       <div class="text-center description">
         <a href="/certificate" data-component="TasksTrigger" data-TasksTrigger="no-multi-click" class="btn btn-primary b-margin">Download</a>
         <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" class="btn b-margin">Print request</a>
@@ -41,7 +40,7 @@
       <div class="text-center h5 b-margin">
         {{type_name}}: {{certificate_name}} hours
       </div>
-      {{> badge type=type key=(slugify certificate_name) hours=hours disabled=true}}
+      {{> badge hours=hours disabled=true}}
       <div class="text-center description">
         {{certificate_name}} hour award being verified. If you've been waiting for over a week, you can <a data-component="TasksTrigger" data-TasksTrigger="no-multi-click" href="/verify-hours-email-send/?award={{hours}}">re-send the verification {{inflect (length @root.data.tasksInfo) "message" "messages"}}</a>.
       </div>
@@ -58,7 +57,7 @@
       <div class="text-center h5 b-margin">
         {{type_name}}: {{certificate_name}} hours
       </div>
-      {{> badge type=type key=(slugify certificate_name) hours=hours disabled=true}}
+      {{> badge hours=hours disabled=true}}
       <p class="text-center description">
         {{certificate_name}} hour certificate available! Claiming this certificate will send {{inflect (length @root.data.tasksInfo) "an email" "emails"}} to the {{inflect (length @root.data.tasksInfo) "person" "people"}} managing your volunteering to verify the hours you've logged.
       </p>
@@ -78,7 +77,7 @@
       <div class="text-center h5 b-margin">
         {{type_name}}: {{certificate_name}} hours
       </div>
-      {{> badge type=type key=(slugify certificate_name) hours=hours disabled=true}}
+      {{> badge hours=hours disabled=true}}
       <div class="text-center description h5">
         <strong>{{subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))}} {{inflect (subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))) "hour" "hours"}} to go.</strong>
       </div>
