improved public profile

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -160,14 +160,14 @@
                             {{/if ~}}
                             {{{label}}}
                           </a>
-                          {{#if public_checkbox ~}}
+                          {{!-- {{#if public_checkbox ~}}
                           <div class="menu-badge">
-                            <label class="form-checkbox">
+                            <label class="form-switch">
                               <input type="checkbox">
                               <i class="form-icon"></i> Public
                             </label>
                           </div>
-                          {{/if ~}}
+                          {{/if ~}} --}}
                         </li>
                       {{/if ~}}
                     {{/each ~}}
@@ -300,14 +300,14 @@
                     {{/if ~}}
                     {{label}}
                   </a>
-                  {{#if public_checkbox ~}}
+                  {{!-- {{#if public_checkbox ~}}
                   <div class="menu-badge">
                     <label class="form-checkbox">
                       <input type="checkbox">
                       <i class="form-icon"></i> Public
                     </label>
                   </div>
-                  {{/if ~}}
+                  {{/if ~}} --}}
                 </li>
               {{/if ~}}
               {{/each ~}}
