visual improvements around content blocks

--- a/configuration/templates/volunteering/awards.hbs
+++ b/configuration/templates/volunteering/awards.hbs
@@ -1,48 +1,53 @@
 {{#unless @root.data.isAdmin ~}}
-<div class="container awards">
-  {{!-- <ul class="step">
-  {{#each @root.context.metaData.certificates ~}}
-  {{#ifAny (compare type "approach") (compare type "ascent") ~}}
-  <li class="step-item{{#compare @root.data.accountInfo.hours_verify_award hours}} active{{/compare}}">
-  <a href="#" class="tooltip" data-tooltip="{{certificate_name}} hours">{{hours}}</a>
-  </li>
-  {{/ifAny ~}}
-  {{/each ~}}
-  </ul> --}}
+{{!-- <ul class="step">
+{{#each @root.context.metaData.certificates ~}}
+{{#ifAny (compare type "approach") (compare type "ascent") ~}}
+<li class="step-item{{#compare @root.data.accountInfo.hours_verify_award hours}} active{{/compare}}">
+<a href="#" class="tooltip" data-tooltip="{{certificate_name}} hours">{{hours}}</a>
+</li>
+{{/ifAny ~}}
+{{/each ~}}
+</ul> --}}
 
-  {{#each @root.context.metaData.certificates ~}}
+{{#each @root.context.metaData.certificates ~}}
 
-  {{!-- It's already awarded --}}
-  {{#compare @root.data.awardsStatus.current hours ~}}
-  <div class="columns">
-    <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto b-margin-full">
-      <h2 class="text-center">
-        {{#if in_progress}}Current{{else}}My{{/if}} Award
-      </h2>
-      <div class="text-center h5 b-margin">
-        {{type_name}}: {{certificate_name}} hours
-      </div>
-      {{> badge hours=hours}}
-      <div class="text-center description">
-        <a href="/certificate" data-component="TasksTrigger" data-TasksTrigger="no-multi-click" class="btn btn-primary b-margin">Download</a>
-        <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" class="btn b-margin">Print request</a>
-      </div>
-    </div>
+{{!-- It's already awarded --}}
+{{#compare @root.data.awardsStatus.current hours ~}}
+<div class="empty">
+  <div class="empty-icon">
+    <span class="fal fa-user fa-3x"></span>
   </div>
-  {{/compare ~}}
+  <p class="empty-title h5">
+    {{type_name}}: {{certificate_name}} hours
+  </p>
+  {{> badge hours=hours}}
+  <div class="empty-action">
+    <a href="/certificate" data-component="TasksTrigger" data-TasksTrigger="no-multi-click" class="btn btn-primary b-margin">Download</a>
+    <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" class="btn b-margin">Print request</a>
+  </div>
+</div>
+{{/compare ~}}
+
+{{#ifAny (compare @root.data.awardsStatus.being_verified hours) (compare @root.data.awardsStatus.claimable hours) (compare @root.data.awardsStatus.working_towards hours) ~}}
+<div class="content-break">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <polygon fill="#ebedfa" points="100,0 100,100 0,0"></polygon>
+  </svg>
 
   {{!-- being verified --}}
   {{#compare @root.data.awardsStatus.being_verified hours ~}}
-  <div class="columns">
-    <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto b-margin-full">
-      {{!-- It's being verified --}}
-      <h2 class="text-center">Next Award</h2>
-      <div class="text-center h5 b-margin">
-        {{type_name}}: {{certificate_name}} hours
-      </div>
-      {{> badge hours=hours disabled=true}}
-      <div class="text-center description">
-        {{certificate_name}} hour award being verified. If you've been waiting for over a week, you can <a data-component="TasksTrigger" data-TasksTrigger="no-multi-click" href="/verify-hours-email-send/?award={{hours}}">re-send the verification {{inflect (length @root.data.tasksInfo) "message" "messages"}}</a>.
+  <div class="container awards">
+    <div class="columns">
+      <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto b-margin-full">
+        {{!-- It's being verified --}}
+        <h2 class="text-center">Next Award</h2>
+        <div class="text-center h5 b-margin">
+          {{type_name}}: {{certificate_name}} hours
+        </div>
+        {{> badge hours=hours disabled=true}}
+        <div class="text-center description">
+          {{certificate_name}} hour award being verified. If you've been waiting for over a week, you can <a data-component="TasksTrigger" data-TasksTrigger="no-multi-click" href="/verify-hours-email-send/?award={{hours}}">re-send the verification {{inflect (length @root.data.tasksInfo) "message" "messages"}}</a>.
+        </div>
       </div>
     </div>
   </div>
@@ -50,45 +55,50 @@
 
   {{!-- claimable --}}
   {{#compare @root.data.awardsStatus.claimable hours ~}}
-  <div class="columns working-towards">
-    <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto b-margin-full">
-      {{!-- It's ready to claim--}}
-      <h2 class="text-center">Next Award</h2>
-      <div class="text-center h5 b-margin">
-        {{type_name}}: {{certificate_name}} hours
+  <div class="container awards">
+    <div class="columns working-towards">
+      <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto b-margin-full">
+        {{!-- It's ready to claim--}}
+        <h2 class="text-center">Next Award</h2>
+        <div class="text-center h5 b-margin">
+          {{type_name}}: {{certificate_name}} hours
+        </div>
+        {{> badge hours=hours disabled=true}}
+        <p class="text-center description">
+          {{certificate_name}} hour certificate available! Claiming this certificate will send {{inflect (length @root.data.tasksInfo) "an email" "emails"}} to the {{inflect (length @root.data.tasksInfo) "person" "people"}} managing your volunteering to verify the hours you've logged.
+        </p>
+        <p class="text-center">
+          <a href="/verify-hours-email-send/?award={{hours}}" data-component="TasksTrigger" data-TasksTrigger="no-multi-click" class="btn btn-primary btn-success">Claim this certificate</a>
+        </p>
       </div>
-      {{> badge hours=hours disabled=true}}
-      <p class="text-center description">
-        {{certificate_name}} hour certificate available! Claiming this certificate will send {{inflect (length @root.data.tasksInfo) "an email" "emails"}} to the {{inflect (length @root.data.tasksInfo) "person" "people"}} managing your volunteering to verify the hours you've logged.
-      </p>
-      <p class="text-center">
-        <a href="/verify-hours-email-send/?award={{hours}}" data-component="TasksTrigger" data-TasksTrigger="no-multi-click" class="btn btn-primary btn-success">Claim this certificate</a>
-      </p>
     </div>
   </div>
   {{/compare ~}}
 
   {{!-- working on --}}
   {{#compare @root.data.awardsStatus.working_towards hours ~}}
-  <div class="columns working-towards">
-    <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto b-margin-full">
-      {{!-- It's not there yet --}}
-      <h2 class="text-center">Working towards</h2>
-      <div class="text-center h5 b-margin">
-        {{type_name}}: {{certificate_name}} hours
-      </div>
-      {{> badge hours=hours disabled=true}}
-      <div class="text-center description h5">
-        <strong>{{subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))}} {{inflect (subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))) "hour" "hours"}} to go.</strong>
-      </div>
-      <div class="text-center description">
-        Once you have reached {{hours}} hours, you can request verification by the nominated {{inflect (length @root.data.tasksInfo) "person" "people"}} at the {{inflect (length @root.data.tasksInfo) "place" "places"}} you volunteer.
+  <div class="container awards">
+    <div class="columns working-towards">
+      <div class="column col-4 col-xl-6 col-md-8 col-sm-10 col-xs-12 col-mx-auto b-margin-full">
+        {{!-- It's not there yet --}}
+        <h2 class="text-center">Working towards</h2>
+        <div class="text-center h5 b-margin">
+          {{type_name}}: {{certificate_name}} hours
+        </div>
+        {{> badge hours=hours disabled=true}}
+        <div class="text-center description h5">
+          <strong>{{subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))}} {{inflect (subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))) "hour" "hours"}} to go.</strong>
+        </div>
+        <div class="text-center description">
+          Once you have reached {{hours}} hours, you can request verification by the nominated {{inflect (length @root.data.tasksInfo) "person" "people"}} at the {{inflect (length @root.data.tasksInfo) "place" "places"}} you volunteer.
+        </div>
       </div>
     </div>
   </div>
   {{/compare ~}}
-  {{/each ~}}
 </div>
+{{/ifAny ~}}
+{{/each ~}}
 {{/unless ~}}
 
 <div class="modal" id="certificate-request">
