--- a/configuration/templates/volunteering/groups.hbs
+++ b/configuration/templates/volunteering/groups.hbs
@@ -18,7 +18,7 @@
 {{#unless (compare (length @root.data.tasksInfo) 0) ~}}
 <div class="content-break">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-    <polygon fill="#EEF0FA" points="100,0 100,100 0,0"></polygon>
+    <polygon fill="#ebedfa" points="100,0 100,100 0,0"></polygon>
   </svg>
   <div class="container">
     <div class="columns cards equal-height">
