--- a/configuration/templates/volunteering/hours-log.hbs
+++ b/configuration/templates/volunteering/hours-log.hbs
@@ -10,7 +10,7 @@
 
 <div class="content-break">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-    <polygon fill="#EEF0FA" points="100,0 100,100 0,0"></polygon>
+    <polygon fill="#ebedfa" points="100,0 100,100 0,0"></polygon>
   </svg>
   <div class="container">
     <div class="columns">
