--- a/configuration/templates/volunteering/profile.hbs
+++ b/configuration/templates/volunteering/profile.hbs
@@ -29,7 +29,7 @@
         <div class="form-group text-left">
           <label class="form-switch">
             <input type="checkbox" checked="checked" disabled>
-            <i class="form-icon"></i> Make my profile public
+            <span class="form-icon"></span> Make my profile public
           </label>
         </div>
       </div>
