--- a/configuration/templates/volunteering/awards.hbs
+++ b/configuration/templates/volunteering/awards.hbs
@@ -30,9 +30,11 @@
 
 {{#ifAny (compare @root.data.awardsStatus.being_verified hours) (compare @root.data.awardsStatus.claimable hours) (compare @root.data.awardsStatus.working_towards hours) ~}}
 <div class="content-break">
+  {{#if @root.data.awardsStatus.current ~}}
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
     <polygon fill="#ebedfa" points="100,0 100,100 0,0"></polygon>
   </svg>
+  {{/if ~}}
 
   {{!-- being verified --}}
   {{#compare @root.data.awardsStatus.being_verified hours ~}}
