--- a/configuration/templates/volunteering/profile.hbs
+++ b/configuration/templates/volunteering/profile.hbs
@@ -38,7 +38,7 @@
   {{/compare ~}}
 </div>
 
-{{#if @root.data.tasksInfo ~}}
+{{#compare (length @root.data.tasksInfo) ">" 0 ~}}
 <div class="content-break">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
     <polygon fill="#ebedfa" points="100,0 100,100 0,0"></polygon>
@@ -110,4 +110,4 @@
     </div>
   </div>
 </div>
-{{/if ~}}
+{{/compare ~}}
