improved error message

--- a/configuration/templates/errors/500.hbs
+++ b/configuration/templates/errors/500.hbs
@@ -2,8 +2,9 @@
   <div class="empty-icon">
     <span class="fal fa-exclamation-circle fa-3x"></span>
   </div>
-  <p class="empty-title h5">Error 500: Something went terribly wrong</p>
-  <p class="empty-subtitle">Please try again, but contact us if the problem persists.</p>
+  <p class="empty-title h5">Error</p>
+  <p class="empty-subtitle">This site is currently in development.</p>
+  <p class="empty-subtitle">Please try again, but contact us with a screenshot and as much information as you can provide if this happens again.</p>
   <div class="empty-action">
     <a href="/" class="btn btn-primary">Home</a>
     <a href="mailto:{{> support_email_address}}" class="btn btn-link">Contact us</a>
