added definition of volunteering

--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -14,12 +14,24 @@
         <ul class="fa-ul">
           <li>
             <span class="fa-li"><span class="far fa-check-circle text-success"></span></span>
-            <span class="text-grey">Volunteering is a choice to give time or energy, of one's own free will, and a choice not motivated for financial gain or for a wage or salary.</span>
+            <span class="text-grey">Unpaid</span>
           </li>
-          {{!-- <li>
+          <li>
+            <span class="fa-li"><span class="far fa-check-circle text-success"></span></span>
+            <span class="text-grey">Your own choice to take part</span>
+          </li>
+          <li>
+            <span class="fa-li"><span class="far fa-check-circle text-success"></span></span>
+            <span class="text-grey">Benefits the community or the environment</span>
+          </li>
+          <li>
             <span class="fa-li"><span class="far fa-times-circle text-error"></span></span>
-            <span class="text-grey">Paid internships, etc. [Need improved text]</span>
-          </li> --}}
+            <span class="text-grey">Work experience</span>
+          </li>
+          <li>
+            <span class="fa-li"><span class="far fa-times-circle text-error"></span></span>
+            <span class="text-grey">Mandatory college / university placements</span>
+          </li>
         </ul>
       {{!-- </div> --}}
 
